--- a/src/app/sistema/estoque/fornecedores/edit-fornecedor/edit-fornecedor.component.html
+++ b/src/app/sistema/estoque/fornecedores/edit-fornecedor/edit-fornecedor.component.html
@@ -434,13 +434,13 @@
             </div>
 
             <div class="col-12 px-2 p-0 m-0">
-              <p>Selecione as condições de pagamento disponíveis</p>
-              <ng-container *ngFor="let condicao of paymentCondition">
+              <ng-container *ngFor="let condicao of condicoesPagamento">
                 <div class="form-check form-check-inline px-4">
                   <input
                     (click)="checkPayment(condicao.id)"
                     class="form-check-input shadow-sm"
                     type="checkbox"
+                    checked
                   />
                   <label class="form-check-label">{{ condicao?.nome }}</label>
                     </div>
