--- a/src/app/sistema/vendas/clientes/dados-venda/dados-venda.component.html
+++ b/src/app/sistema/vendas/clientes/dados-venda/dados-venda.component.html
@@ -61,6 +61,8 @@
     <div class="col-12 pt-3 text-custom-dark">
       <h5 class="m-0">Tabelas de venda</h5>
     </div>
+    
+    
     <div class="col-3 mt-3 text-custom-dark">
       <!-- Tabela A -->
       <div class="form-check mt-2">
@@ -89,7 +91,6 @@
       </div>
     </div>
   
-  
     <div class="col-3 mt-3 text-custom-dark">
       <!-- Tabela F -->
       <div class="form-check mt-2">
@@ -116,6 +117,97 @@
         <input class="form-check-input" type="checkbox" value="tabela_j" id="tabela_j">
         <label class="form-check-label" for="tabela_j">Tabela J</label>
       </div>
+    </div>
+
+      <div class="col-3 mt-3 text-custom-dark">
+      <!-- Tabela K -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_k" id="tabela_k">
+        <label class="form-check-label" for="tabela_k">Tabela K</label>
+      </div>
+      <!-- Tabela L -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_l" id="tabela_l">
+        <label class="form-check-label" for="tabela_l">Tabela L</label>
+      </div>
+      <!-- Tabela M -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_m" id="tabela_m">
+        <label class="form-check-label" for="tabela_m">Tabela M</label>
+      </div>
+      <!-- Tabela N -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_n" id="tabela_n">
+        <label class="form-check-label" for="tabela_n">Tabela N</label>
+      </div>
+      <!-- Tabela O -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_o" id="tabela_o">
+        <label class="form-check-label" for="tabela_o">Tabela O</label>
+      </div>
+    </div>
+
+      <div class="col-3 mt-3 text-custom-dark">
+      <!-- Tabela P -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_p" id="tabela_p">
+        <label class="form-check-label" for="tabela_p">Tabela P</label>
+      </div>
+      <!-- Tabela Q -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_q" id="tabela_q">
+        <label class="form-check-label" for="tabela_q">Tabela Q</label>
+      </div>
+      <!-- Tabela R -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_r" id="tabela_r">
+        <label class="form-check-label" for="tabela_r">Tabela R</label>
+      </div>
+      <!-- Tabela S -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_s" id="tabela_s">
+        <label class="form-check-label" for="tabela_s">Tabela S</label>
+      </div>
+      <!-- Tabela T -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_t" id="tabela_t">
+        <label class="form-check-label" for="tabela_t">Tabela T</label>
+      </div>
+    </div>
+
+    <div class="col-3 mt-3 text-custom-dark">
+      <!-- Tabela u -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_u" id="tabela_u">
+        <label class="form-check-label" for="tabela_u">Tabela U</label>
+      </div>
+      <!-- Tabela V -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_v" id="tabela_v">
+        <label class="form-check-label" for="tabela_v">Tabela V</label>
+      </div>
+      <!-- Tabela W -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_w" id="tabela_w">
+        <label class="form-check-label" for="tabela_w">Tabela W</label>
+      </div>
+      <!-- Tabela X -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_x" id="tabela_x">
+        <label class="form-check-label" for="tabela_x">Tabela x</label>
+      </div>
+      <!-- Tabela Y -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_y" id="tabela_y">
+        <label class="form-check-label" for="tabela_y">Tabela Y</label>
+      </div>
+      <div class="col-3 mt-3 text-custom-dark">
+      <!-- Tabela Z -->
+      <div class="form-check mt-2">
+        <input class="form-check-input" type="checkbox" value="tabela_z" id="tabela_z">
+        <label class="form-check-label" for="tabela_z">Tabela Z</label>
+      </div>
+    </div>
     </div>
   </div>
   
