--- a/src/app/sistema/vendas/editar-clientes/dados-venda/dados-venda.component.html
+++ b/src/app/sistema/vendas/editar-clientes/dados-venda/dados-venda.component.html
@@ -115,6 +115,14 @@
       <input class="form-check-input" type="checkbox" value="tabela_j" id="tabela_j">
       <label class="form-check-label" for="tabela_j">Tabela J</label>
     </div>
+
+    <div class="col-3 mt-3 text-custom-dark">
+
+
+    <div class="form-check mt-2">
+      <input class="form-check-input" type="checkbox" value="tabela_j" id="tabela_j">
+      <label class="form-check-label" for="tabela_j">Tabela J</label>
+    </div>
   </div>
 </div>
 
