--- a/src/app/sistema/vendas/pedidos-vendas/criar-pedido-vendas/criar-pedido-vendas.component.html
+++ b/src/app/sistema/vendas/pedidos-vendas/criar-pedido-vendas/criar-pedido-vendas.component.html
@@ -427,6 +427,7 @@
                     <table class="table text-custom-dark">
                         <thead>
                             <tr>
+                                <th scope="col-1">Tabela</th>
                                 <th scope="col-1">Cód.</th>
                                 <th scope="col-1">Produto</th>
                                 <th scope="col-1">Quantidade</th>
@@ -442,6 +443,13 @@
                         </thead>
                         <tbody *ngFor="let oneItem of item['controls']; let i = index" formArrayName="item">
                             <tr [formGroupName]="i">
+                                <td class="row">
+                                    <select #tabela class="col form-select form-select-sm margin-r" id="tabela" formControlName="tabela">
+                                        <option value="" disabled selected>Selecionar...</option>
+                                        <option value="entrega">entrega</option>
+                                        <option value="retirada">retirada</option>
+                                    </select>
+                                </td>
                                 <th scope="row">{{ oneItem.value.codigo }}</th>
                                 <td>{{ oneItem.value.produto }}</td>
                                 <td>
